force-app/main/default/objects/HDT_RegionalAdditional__mdt/HDT_RegionalAdditional__mdt.object-meta.xml
<CustomObject>
    <label>Addizionale Regionale</label>
    <pluralLabel>Addizionali Regionali</pluralLabel>
</CustomObject>