force-app/main/default/objects/HDT_RegionalAdditional__mdt/fields/AdditionalValue__c.field-meta.xml
<CustomField>
    <fullName>AdditionalValue__c</fullName>
    <label>Valore Addizionale</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>