force-app/main/default/objects/HDT_RegionalAdditional__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Regione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>