force-app/main/default/objects/HDT_RegionalAdditional__mdt/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <label>Imposta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Imosta Autopr-Prod EE Industr (Cod. G_I15)</fullName>
                <default>true</default>
                <label>Imosta Autopr-Prod EE Industr (Cod. G_I15)</label>
            </value>
            <value>
                <fullName>Imposta Usi Domestici (Cod. G_ICD)</fullName>
            </value>
            <value>
                <fullName>Imposta usi non domestici iva 10% (Cod. G_ICC10)</fullName>
            </value>
            <value>
                <fullName>Imposta usi non domestici iva 22% (Cod. G_ICC)</fullName>
            </value>
            <value>
                <fullName>Imposta usi industriali (Cod. G_I04)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>